--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <h5>There are many types of cartoons like for kids,there are some crazy and funny cartoons eg.</h5>
 
-  <span style="background-color:bisque;">
+  <div style="background-color:bisque;">
     <h4> Peppa pig , Masha and the bear</h4>
-  </span>and a new cartoons
+  </div>and a new cartoons
 
   <div style="background-color: blanchedalmond;">
     <h4> Butterbeen cafe</h4>
