--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       understanding the history and many things else about movies or we can say films too.</u></h2>
 
   <div style="text-align: center;"><img src="gettyimages-1181998212-612x612.jpg" alt="bye" width="550" height="390">
-
+    <h1>Thank You</h1>
     <h1> Made By Yatharth Gupta</h1>
 </body>
 
