--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   are popular nowsdays for kids let I show you some picture of that and click the photo if you wonna show a episode of
   that cartoon character.
 
-  <div style="text-align: center;"><a
-      href="https://www.google.com/search?q=peppa+pig+in+hindi#fpstate=ive&vld=cid:5b2172b5,vid:PvOaiV8dx54,st:0"><img
-        src="https://assets-us-01.kc-usercontent.com/500e0a65-283d-00ef-33b2-7f1f20488fe2/442b7436-d438-4d8f-8b40-03e07f0db72d/peppa_pig.webp"></a>
+  <div style="text-align: center;">
+    <a href="https://www.youtube.com/watch?v=HDwTghYw6bY">
+      <img src="https://assets-us-01.kc-usercontent.com/500e0a65-283d-00ef-33b2-7f1f20488fe2/442b7436-d438-4d8f-8b40-03e07f0db72d/peppa_pig.webp"></a>
   </div>
 
   <u><i>
@@ -47,7 +47,7 @@
   <a href="https://www.google.com/" target="_blank">google</a>
 
   <div style="text-align: center;"><a
-      href="https://www.google.com/search?q=masha+and+the+bear+in+hindi+new+episode#fpstate=ive&vld=cid:38817084,vid:Cm3Oa7PeIrs,st:0"><img
+      href="https://www.youtube.com/watch?v=YDhoIHgYYwo"><img
         src="https://play-lh.googleusercontent.com/wZjM5H70VyF9K0tU8OzPkSWp6liUjf3leCelkznzp4Q2KmBjH8NbyGgd5SlKhRangPvK"
         width="390" height="354"></a></div>
 
