--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   Storytelling through sequential images has ancient roots, predating modern printing by centuries.
   <h2><u><i>So,as we saw the Divisions,Episode,Photos and History over cartoons,but we only saw about cartoons but
         movies are also there so click on this link</i><a href="second.html" target="_blank">http/bigcartoons/..</a>for
-      understanding the history and many things else about movies or we can </u></h2>
+      understanding the history and many things else about movies or we can say films too </u></h2>
 
   <div style="text-align: center;"><img src="gettyimages-1181998212-612x612.jpg" alt="bye" width="550" height="390">
 
