--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <h4> Butterbeen cafe</h4>
   </div>
 
-  are popular nowsdays for kids let I show you some picture of that and click the photo if you wonna show a episode of
-  that cartoon character.
+  are popular nowsdays for kids let I show you some picture of that and <mark>click the photo if you wonna show a
+    episode of
+    that cartoon character.</mark>
 
   <div style="text-align: center;">
     <a href="https://www.youtube.com/watch?v=HDwTghYw6bY">
-      <img src="https://assets-us-01.kc-usercontent.com/500e0a65-283d-00ef-33b2-7f1f20488fe2/442b7436-d438-4d8f-8b40-03e07f0db72d/peppa_pig.webp"></a>
+      <img
+        src="https://assets-us-01.kc-usercontent.com/500e0a65-283d-00ef-33b2-7f1f20488fe2/442b7436-d438-4d8f-8b40-03e07f0db72d/peppa_pig.webp"></a>
   </div>
 
   <u><i>
@@ -36,25 +38,27 @@
     </i></u>
 
   <h4>The official backstory of Peppa Pig is that she's a cheerful, muddy-puddle-loving piglet in a British preschool
-    show, living with her family (Mummy Pig, Daddy Pig, George) and friends, with the show starting in 2004 and focusing
+    show, living with her family<mark>(Mummy Pig, Daddy Pig, George) and friends,</mark> with the show starting in 2004
+    and focusing
     on everyday adventures. However, many fan theories and creepy urban legends suggest darker, real-life origins,
-    including tragic stories from rural England, schizophrenia interpretations of Grandma Pig, or allegories to Orwell's
-    Animal Farm, though these aren't part of the official canon. </h4>
+    including tragic stories from<mark> rural England, schizophrenia interpretations of Grandma Pig</mark>,
+    or allegories to Orwell's
+    Animal Farm, though these aren't part of the<mark> official canon.</mark> </h4>
 
 
   <!--<a href="/first.html">first</a>-->
 
   <a href="https://www.google.com/" target="_blank">google</a>
 
-  <div style="text-align: center;"><a
-      href="https://www.youtube.com/watch?v=YDhoIHgYYwo"><img
+  <div style="text-align: center;"><a href="https://www.youtube.com/watch?v=YDhoIHgYYwo"><img
         src="https://play-lh.googleusercontent.com/wZjM5H70VyF9K0tU8OzPkSWp6liUjf3leCelkznzp4Q2KmBjH8NbyGgd5SlKhRangPvK"
         width="390" height="354"></a></div>
 
   <u><i>
       <h2>See this image, it is the image of Masha and the bear and now you can see the history too. </h2>
     </i></u>
-  <h4>The animated show Masha and the Bear is based on a Russian folk tale, but internet theories offer dark, fictional
+  <h4>The animated show Masha and the Bear is based on a<mark> Russian folk tale</mark> but internet theories offer
+    dark, fictional
     backstories, including one where Masha is lost and eaten by a bear, and the Bear is a retired circus performer who
     adopted a bear cub. The show itself portrays Masha as a mischievous but lovable girl who befriends a retired circus
     bear, creating chaos but also fun adventures, while the bear finds his peaceful life turned upside down.
@@ -81,7 +85,8 @@
 
   <h3>The history of cartoons spans from early sequential art to modern CGI, beginning with Victorian optical toys
     (Zoetrope) and early projected shows like Émile Reynaud's 1892 Pantomimes Lumineuses, with Émile Cohl's
-    Fantasmagorie (1908) considered the first true animated cartoon. The 1920s-1930s brought the "Golden Age" with sound
+    Fantasmagorie (1908) considered the first true animated cartoon.<mark>The 1920s-1930s brought the "Golden Age"
+      with sound</mark>
     (Disney's Steamboat Willie) and color, shifting to TV in the 1950s (limited animation) and experiencing a resurgence
     in the 1980s. The 1990s introduced CGI (Pixar's Toy Story), diverse genres, streaming, and the rise of networks like
     Cartoon Network.</h3>
