--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <h4> Butterbeen cafe</h4>
   </div>
 
-  are popular nowsdays for kids let I show you some picture of that and <mark>click the photo if you wonna show a
+  are popular nowsdays for kids let I show you some picture of that and <mark><b>click the photo if you wonna show a
     episode of
-    that cartoon character.</mark>
-
-  <div style="text-align: center;">
+    that cartoon character.</b></mark>
+    <div style="text-align: center;">
     <a href="https://www.youtube.com/watch?v=HDwTghYw6bY">
       <img
         src="https://assets-us-01.kc-usercontent.com/500e0a65-283d-00ef-33b2-7f1f20488fe2/442b7436-d438-4d8f-8b40-03e07f0db72d/peppa_pig.webp"></a>
@@ -37,13 +36,13 @@
       <h2>So,this is the image of peppa pig now lets look on the history of this cartoon</h2>
     </i></u>
 
-  <h4>The official backstory of Peppa Pig is that she's a cheerful, muddy-puddle-loving piglet in a British preschool
-    show, living with her family<mark>(Mummy Pig, Daddy Pig, George) and friends,</mark> with the show starting in 2004
+  <h4><p align="justify">The official backstory of Peppa Pig is that she's a cheerful, muddy-puddle-loving piglet in a British preschool
+    show, living with her family<mark><b>(Mummy Pig, Daddy Pig, George) and friends,</b></mark> with the show starting in 2004
     and focusing
     on everyday adventures. However, many fan theories and creepy urban legends suggest darker, real-life origins,
-    including tragic stories from<mark> rural England, schizophrenia interpretations of Grandma Pig</mark>,
+    including tragic stories from<mark><b>rural England, schizophrenia interpretations of Grandma Pig</b></mark>,
     or allegories to Orwell's
-    Animal Farm, though these aren't part of the<mark> official canon.</mark> </h4>
+    Animal Farm, though these aren't part of the<mark><b>official canon.</b></mark> </h4>
 
 
   <!--<a href="/first.html">first</a>-->
@@ -57,7 +56,7 @@
   <u><i>
       <h2>See this image, it is the image of Masha and the bear and now you can see the history too. </h2>
     </i></u>
-  <h4>The animated show Masha and the Bear is based on a<mark> Russian folk tale</mark> but internet theories offer
+  <h4>The animated show Masha and the Bear is based on a<mark><b>Russian folk tale</b></mark> but internet theories offer
     dark, fictional
     backstories, including one where Masha is lost and eaten by a bear, and the Bear is a retired circus performer who
     adopted a bear cub. The show itself portrays Masha as a mischievous but lovable girl who befriends a retired circus
@@ -72,10 +71,12 @@
         new cartoon</h2>
     </i></u>
 
-  <h4><a href="https://en.wikipedia.org/wiki/Butterbean%27s_Caf%C3%A9">Butterbeen cafe</a> is a Nickelodeon animated
-    series about fairy chef Butterbean and her friends running a magical café in Puddlebrook, emphasizing farm-to-table
-    cooking and leadership skills, created by Jonny Belt & Robert Scull (of Bubble Guppies fame) and airing from
-    2018-2020, focusing on themes like kindness, teamwork, and using enchanted tools to create healthy treats. The show
+  <h4><a href="https://en.wikipedia.org/wiki/Butterbean%27s_Caf%C3%A9">Butterbeen cafe</a> is a <mark><b>
+    Nickelodeon animated
+    series</b></mark> about fairy chef Butterbean and her friends running a magical café in Puddlebrook, emphasizing farm-to-table
+    cooking and leadership skills, created by <mark><b>Jonny Belt & Robert Scull (of Bubble Guppies fame)</b></mark> and airing from
+    <mark><b>2018-2020</b></mark>, focusing on themes like kindness, teamwork, and using enchanted tools to create healthy treats.
+     The show
     followed a social-emotional curriculum, teaching young viewers valuable life lessons through fantastical culinary
     adventures, facing challenges from rival Ms. Marmalady</h4>
 
@@ -85,48 +86,54 @@
 
   <h3>The history of cartoons spans from early sequential art to modern CGI, beginning with Victorian optical toys
     (Zoetrope) and early projected shows like Émile Reynaud's 1892 Pantomimes Lumineuses, with Émile Cohl's
-    Fantasmagorie (1908) considered the first true animated cartoon.<mark>The 1920s-1930s brought the "Golden Age"
-      with sound</mark>
+    Fantasmagorie (1908) considered the first true animated cartoon.<mark><b>The 1920s-1930s brought the "Golden Age"
+      with sound</b></mark>
     (Disney's Steamboat Willie) and color, shifting to TV in the 1950s (limited animation) and experiencing a resurgence
     in the 1980s. The 1990s introduced CGI (Pixar's Toy Story), diverse genres, streaming, and the rise of networks like
     Cartoon Network.</h3>
 
   <ul>
     <li>
-      <h4> <u> Ancient Roots :</u> <i>Cave drawings with sequential limbs, Egyptian tomb art, and Greek pottery show
-          early interest in depicting movement.</i></h4>
+      <h4> <u> Ancient Roots :</u> <i>Cave drawings with sequential limbs,<mark><b>Egyptian tomb art</b></mark>, and Greek pottery show
+        early interest in depicting movement.</i></h4>
     </li>
 
 
     <li>
-      <h4><u>Optical Toys:</u><i> Devices like the Phenakistoscope (1832) and Zoetrope (1834) used persistence of vision
+      <h4><u>Optical Toys:</u><i> Devices like the Phenakistoscope<mark><b>(1832) and Zoetrope (1834)</b></mark> used persistence of vision
           to create movement from drawings.</i></h4>
     </li>
 
     <li>
-      <h4><u>Political Cartoons:</u><i> Early 19th-century newspapers used cartoons for social commentary (e.g., Punch
+      <h4><u>Political Cartoons:</u><i> Early <mark><b>19th-century</b></mark> newspapers used cartoons for social 
+        commentary (e.g., Punch
           magazine).</i></h4>
     </li>
 
     <li>
-      <h4><u>Film Experiments:</u><i> Émile Reynaud's Théâtre Optique (1892) projected hand-painted images, considered
+      <h4><u>Film Experiments:</u><i> Émile Reynaud's Théâtre Optique<mark><b> (1892)</b></mark> projected hand-painted images, considered
           first public animated films.</i></h4>
     </li>
   </ul>
   <p> A cartoon is a type of visual art that is typically drawn, frequently animated, in an unrealistic or
     semi-realistic style. The specific meaning has evolved, but the modern usage usually refers to either: an image or
     series of images intended for satire, caricature, or humor; or a motion picture that relies on a sequence of
-    illustrations for its animation. Someone who creates cartoons in the first sense is called a cartoonist,[1] and in
-    the second sense they are usually called an animator.</p>
+    illustrations for its animation.<mark><b> Someone who creates cartoons in the first sense is called a cartoonist
+      </b></mark>
+    ,[1] and in
+    the second sense they are usually called an<mark><b> animator.</b></mark></p>
 
   <p>The concept originated in the Middle Ages, and first described a preparatory drawing for a piece of art, such as a
-    painting, fresco, tapestry, or stained glass window. In the 19th century, beginning in Punch magazine in 1843,
+    painting, fresco, tapestry, or stained glass window. <mark><b>In the 19th century, beginning in Punch magazine
+     in 1843</b></mark>,
     cartoon came to refer – ironically at first – to humorous artworks in magazines and newspapers. Then it also was
-    used for political cartoons and comic strips. When the medium developed, in the early 20th century, it began to
+    used for political cartoons and comic strips. When the medium developed, <mark><b>in the early 20th century</b>
+    </mark>
+    ,it began to
     refer to animated films that resembled print cartoons.[2]</p>
 
   <i><u>
-      <h4>* Fine art *</h4>
+      <h4><mark><b>* Fine art *</b></mark></h4>
     </u></i>
 
   <p>Christ's Charge to Peter, one of the Raphael Cartoons, c. 1516, a full-size cartoon design for a tapestry
@@ -138,7 +145,7 @@
     work.</p>
   <hr>
   <u><i>
-      <h2>Cartoons can be divided into gag cartoons, which include editorial cartoons, and comic strips.</h2>
+      <h2>Cartoons can be divided into<mark><b> gag cartoons</b></mark>, which include editorial cartoons, and comic strips.</h2>
     </i></u>
 
   <h4><u>
@@ -152,17 +159,17 @@
   </ul>
 
 
-  Gag cartoons, focusing on humor rather than politics,
+  Gag cartoons, <mark><b>focusing on humor rather than politics,
   evolved from early newspaper satirical drawings
-  (like Benjamin Franklin's "Join, or Die") and late
+  (like Benjamin Franklin's "Join, or Die")</b></mark> and late
   19th-century comic strips, blossoming with silent
   film antics and later mastering the single-panel
-  magazine format (think The New Yorker), before
+  magazine format<mark><b> (think The New Yorker)</b></mark>, before
   exploding into animated TV series, becoming a
-  staple of mass media with iconic figures like
-  Mickey Mouse or modern webcomics, always relying
+  staple of<mark><b> mass media with iconic figures like
+  Mickey Mouse or modern webcomics</b></mark>, always relying
   on visual punchlines, relatable situations,
-  and character-driven silliness for laughs.
+  and character-driven<mark><b>silliness for laughs.</b></mark>
 
 
   <div style="text-align: center;"><img src="Gag.jpg" width="500" height="400"></div>
@@ -175,21 +182,21 @@
     </i>
   </ul>
 
-  The history of comic strips can be traced from ancient forms of sequential art to their emergence as a mass medium in
-  newspapers, and their modern evolution into digital formats and graphic novels.
+  The history of comic strips can be traced from<mark><b> ancient forms of sequential art to their emergence as a mass medium in
+  newspapers,</b></mark> and their modern evolution into<mark><b> digital formats and graphic novels.</b></mark>
 
   <i><u>
       <h4>Early Precursors</h4>
     </u></i>
 
-  Storytelling through sequential images has ancient roots, predating modern printing by centuries.
+  Storytelling through sequential images has<mark><b> ancient roots,</b></mark> predating modern printing by centuries.
   <h2><u><i>So,as we saw the Divisions,Episode,Photos and History over cartoons,but we only saw about cartoons but
         movies are also there so click on this link</i><a href="second.html" target="_blank">http/bigcartoons/..</a>for
       understanding the history and many things else about movies or we can say films too </u></h2>
 
   <div style="text-align: center;"><img src="gettyimages-1181998212-612x612.jpg" alt="bye" width="550" height="390">
 
-    <h1> Made By Yatharth Gupta</h1>
+   0 <div style="background-color: antiquewhite;"><h1><p><i><u><mark>" Made By Yatharth Gupta "</mark></u></i></p></h1></div>
 </body>
 
 </html>
