--- a/second.html
+++ b/second.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body bgcolor="yellow">
+    <div style="background-color: aqua;text-align: center;">
+        <h1> <u><i>" History of movies "</i></u></h1>
+    </div>  
+    <h2>As you know that movies are the best way to entertain
+     our eyes and ears so lets start
+    our journey to see the history of movies and there are many types of movies
+     like action movies,comedy movies,romantic movies,thriller movies etc.</h2>
+  <div style="text-align: center;">  <img src="movie.jpg" width="527" 
+    height="325">    
 
+    </div>
+    <h3>So,every thing or every movie has its own history and had its own journey
+        to make it as a movie for clear understanding,
+        and it's Historical story of past and it also tells about past time people
+        and their lifestyle and it also tells about past time movies.</h3>    
+
+
+
+
+
+</body>
+</html>
     
 
 
